--- a/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
@@ -9,78 +9,103 @@
     function agregar(){
         $('#form_novedad').submit();
     }
-
-//     $(document).ready(function() {
-//         $(function()
-//         {
-// //             $('#contenido').wysiwyg();
-//         });
-//     });
 </script>
 
 [% USE HTML %]
 
-<fieldset class="resultados_busqueda">
-    <legend class="titulo_legend trigger click">[% "Agregar novedad de OPAC" | i18n %]:</legend>
+<fieldset>
+    <legend>[% "Agregar novedad de OPAC" | i18n %]:</legend>
         <div class="form">
             [% IF editing %]
-                <form id="form_novedad" action="[% url_prefix %]/admin/editar_novedad.pl" method="POST">
+                <form id="form_novedad" action="[% url_prefix %]/admin/editar_novedad.pl" method="POST" class="form-horizontal">
                     <input type="hidden" id="action" name="action" value="editar">
                     <input type="hidden" id="token" name="token" value="[% token %]">
                     <input type="hidden" id="novedad_id" name="novedad_id" value="[% novedad.id %]">
             [% ELSE %]
-                <form id="form_novedad" action="[% url_prefix %]/admin/agregar_novedad.pl" method="POST">
+                <form id="form_novedad" action="[% url_prefix %]/admin/agregar_novedad.pl" method="POST" class="form-horizontal">
                     <input type="hidden" id="action" name="action" value="agregar">
             [% END %]
-                <ul>
-                    <li class="sub_item">
-                        <label for="titulo">[% "Titulo" | i18n %]</label>
-                          <input type="text" id="titulo" name="titulo" value="[% novedad.getTitulo %]">
-                    </li>
-                    <li class="sub_item">
-                        <label for="categoria">[% "Categor&iacute;a" | i18n %]</label>
-                          <input type="text" id="categoria" name="categoria" value="[% novedad.getCategoria %]">
-                    </li>
-                     <li class="sub_item">
-                       <label for="contenido">[% "Contenido" | i18n %]</label>
-                          <textarea id="contenido" name="contenido" style="width: 88.3%" >[%novedad.getContenido %]</textarea>
-                    </li>
-                    [% IF twitter_enabled %]
-                      <li class="sub_item">     
-                          <input type="checkbox" id="check_publicar" name="check_publicar" value="publicar">[% " Publicar en Twitter" | i18n %]
-                      </li>
+            
+                <div class="control-group">
+                    <label class="control-label" for="titulo">[% "Titulo" | i18n %]</label>
+                    <div class="controls">
+                        <input type="text" id="titulo" name="titulo" value="[% novedad.getTitulo %]">
+                    </div>
+                </div>
+                
+                <div class="control-group">
+                    <label class="control-label" for="categoria">[% "Categor&iacute;a" | i18n %]</label>
+                    <div class="controls">
+                        <input type="text" id="categoria" name="categoria" value="[% novedad.getCategoria %]">
+                    </div>
+                </div>
+                
+                <div class="control-group">
+                    <label class="control-label" for="contenido">[% "Contenido" | i18n %]</label>
+                    <div class="controls">
+                        <textarea id="contenido" name="contenido" style="width: 88.3%" >[%novedad.getContenido %]</textarea>
+                    </div>
+                </div>
+
+                [% IF twitter_enabled %]
+                
+                    <div class="control-group">
+                        <div class="controls">
+                            <input type="checkbox" id="check_publicar" name="check_publicar" value="publicar">[% " Publicar en Twitter" | i18n %]
+                        </div>
+                    </div>
+
+                [% END %]
+                <input type="hidden" id="token" name="token" value="[% token %]">
+                <div class="form-actions">
+                [% IF editing %]
+                
+                    [% PERL %]
+                          print C4::AR::Filtros::action_link_button( 
+                                                          button    => "btn",
+                                                          url       => "[% url_prefix %]/admin/novedades_opac.pl",
+                                                          title     => "[% 'Volver al listado' | i18n %]",
+                                                      ) ;
+
                     [% END %]
-                        <input type="hidden" id="token" name="token" value="[% token %]">
-                        [% IF editing %]
-                            [% PERL %]
-                                        print C4::AR::Filtros::to_Button(   text    => "[% 'Modificar' | i18n %]",
-                                                boton   => "boton_edicion",
-                                                onClick => "modificar();",
-                                                width => "auto",
-                                                title   => "[% 'Modificar novedad' | i18n %]",
-                                                ) ;
-                            [% END %]
-                        [% ELSE %]
-                            [% PERL %]
-                                        print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar' | i18n %]",
-                                                boton   => "boton_agregar",
-                                                onClick => "agregar();",
-                                                width => "auto",
-                                                title   => "[% 'Agreagr novedad' | i18n %]",
-                                                ) ;
-                            [% END %]
-                        [% END %]
-                        
-                  </ul>
-              
+                
+                    [% PERL %]
+                          print C4::AR::Filtros::action_button( 
+                                                            button      => "btn btn-primary",
+                                                            action      => "modificar()", 
+                                                            icon        => "",
+                                                            title       => "[% 'Modificar' | i18n %]",
+                                                      ) ;
+
+
+                    [% END %]
+                    
+                [% ELSE %]
+                
+                    [% PERL %]
+                          print C4::AR::Filtros::action_link_button( 
+                                                          button    => "btn",
+                                                          url       => "[% url_prefix %]/admin/novedades_opac.pl",
+                                                          title     => "[% 'Volver al listado' | i18n %]",
+                                                      ) ;
+
+                    [% END %]
+                
+                     [% PERL %]
+                          print C4::AR::Filtros::action_button( 
+                                                            button      => "btn btn-primary",
+                                                            action      => "agregar()", 
+                                                            icon        => "",
+                                                            title       => "[% 'Agregar' | i18n %]",
+                                                      ) ;
+
+
+                    [% END %]
+                    
+                [% END %]
+                </div>
             </form>
         </div>
 </fieldset>
-[% PERL %]
-        print C4::AR::Filtros::link_to( text    =>  "[% 'Volver al listado' | i18n %]",
-                                        url=>"[% url_prefix %]/admin/novedades_opac.pl",
-                                        title   =>  "[% 'Volver al listado' | i18n %]"
-                ) ;
-[% END %]
 
 [% INCLUDE 'intranet-bottom.inc' %]
