--- a/intranet/htdocs/intranet-tmpl/admin/global/estilosConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/estilosConfig.tmpl
@@ -60,7 +60,7 @@ function updateGuardarModificacion(responseText){
 
 $(document).ready(function() {
     actualizarTabla()
-    zebra('datos_tabla')
+    //zebra('datos_tabla')
 });
 
 function actualizarTabla(){
@@ -74,7 +74,7 @@ function actualizarTabla(){
 
 function updateActualizarTabla(responseText){
     $("#result").html(responseText)
-    zebra('datos_tabla')
+    //zebra('datos_tabla')
 }
 
 </script>
