--- a/intranet/htdocs/intranet-tmpl/admin/global/mailConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/mailConfig.tmpl
@@ -132,7 +132,7 @@
         <div class="form-actions">
             [% PERL %]
                         print C4::AR::Filtros::to_Button(   text    => "[% 'Probar' | i18n %]",
-                                                            boton   => "boton_agregar",
+                                                            boton   => "btn",
                                                             onClick => "probarConfiguracion();",
                                                             title   => "[% 'se enviar&aacute; un correo a su cuenta personal' | i18n %]",
                                                             alternClass => "botonCentrado",
