--- a/intranet/htdocs/intranet-tmpl/admin/global/agregar_novedad_intra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/agregar_novedad_intra.tmpl
@@ -21,14 +21,18 @@
 [% USE HTML %]
 
 <fieldset class="resultados_busqueda">
-    <legend class="titulo_legend trigger click">[% "Agregar novedad de INTRA" | i18n %]:</legend>
-        <div class="form">
             [% IF editing %]
+                <legend>[% "Editar novedad de INTRA" | i18n %]:</legend>
+                    <div class="form">
+            
                 <form id="form_novedad" action="[% url_prefix %]/admin/global/editar_novedad_intra.pl" class="form-horizontal" method="POST">
                     <input type="hidden" id="action" name="action" value="editar">
                     <input type="hidden" id="token" name="token" value="[% token %]">
                     <input type="hidden" id="novedad_id" name="novedad_id" value="[% novedad.id %]">
             [% ELSE %]
+            
+                <legend>[% "Agregar novedad de INTRA" | i18n %]:</legend>
+                    <div class="form">
                 <form id="form_novedad" action="[% url_prefix %]/admin/global/agregar_novedad_intra.pl" class="form-horizontal" method="POST">
                     <input type="hidden" id="action" name="action" value="agregar">
             [% END %]
@@ -58,33 +62,53 @@
                 
                 <div class="form-actions">
                         [% IF editing %]
+                        
                             [% PERL %]
-                                        print C4::AR::Filtros::to_Button(   text    => "[% 'Modificar' | i18n %]",
-                                                boton   => "boton_edicion",
-                                                onClick => "modificar();",
-                                                width => "auto",
-                                                title   => "[% 'Modificar novedad' | i18n %]",
-                                                ) ;
+                                  print C4::AR::Filtros::action_link_button( 
+                                                                  button    => "btn",
+                                                                  url       => "[% url_prefix %]/admin/global/novedades_intra.pl",
+                                                                  title     => "[% 'Volver al listado' | i18n %]",
+                                                              ) ;
+
                             [% END %]
+                            
+                            [% PERL %]
+                                  print C4::AR::Filtros::action_button( 
+                                                                    button      => "btn btn-primary",
+                                                                    action      => "modificar()", 
+                                                                    icon        => "",
+                                                                    title       => "[% 'Modificar' | i18n %]",
+                                                              ) ;
+
+
+                            [% END %]
+                            
                         [% ELSE %]
+                        
                             [% PERL %]
-                                        print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar' | i18n %]",
-                                                boton   => "boton_agregar",
-                                                onClick => "agregar();",
-                                                width => "auto",
-                                                title   => "[% 'Agreagr novedad' | i18n %]",
-                                                ) ;
+                                  print C4::AR::Filtros::action_link_button( 
+                                                                  button    => "btn",
+                                                                  url       => "[% url_prefix %]/admin/global/novedades_intra.pl",
+                                                                  title     => "[% 'Volver al listado' | i18n %]",
+                                                              ) ;
+
                             [% END %]
+                            
+                            [% PERL %]
+                                  print C4::AR::Filtros::action_button( 
+                                                                    button      => "btn btn-primary",
+                                                                    action      => "agregar()", 
+                                                                    icon        => "",
+                                                                    title       => "[% 'Agregar' | i18n %]",
+                                                              ) ;
+
+
+                            [% END %]
+                                    
                         [% END %]
                 </div>
             </form>
         </div>
 </fieldset>
-[% PERL %]
-        print C4::AR::Filtros::link_to( text    =>  "[% 'Volver al listado' | i18n %]",
-                                        url=>"[% url_prefix %]/admin/global/novedades_intra.pl",
-                                        title   =>  "[% 'Volver al listado' | i18n %]"
-                ) ;
-[% END %]
 
 [% INCLUDE 'intranet-bottom.inc' %]
