--- a/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
@@ -26,21 +26,25 @@
 </script>
 
 
-<fieldset class="resultados_busqueda">
-    <legend class="titulo_legend trigger click">[% "Mensajes de Contacto" | i18n %]:</legend>
+<fieldset>
+    <legend>[% "Mensajes de Contacto" | i18n %]:</legend>
         <div class="contenedor_paginador">[% paginador %]</div>
         <div class="datos_tabla_div_user">
             <div class="alert alert-info">[% "La cantidad de mensajes es" | i18n %]: [% cant_mensajes %]</div>
-            <table id="tablaResult" class="table table-striped">
-                <thead>
-                <tr class="titulo_tabla_resultado">
-                    <th>[% "Fecha" | i18n %]</th>
-                    <th>[% "Asunto" | i18n %]</th>
-                    <th>[% "Remitente" | i18n %]</th>
-                    <th>[% "Marcar Como Leido/No Leido" | i18n %]</th>
-                    <th>[% "Eliminar" | i18n %]</th>
-                </tr>
-                </thead>
+            
+            [% PERL %]
+                print C4::AR::Filtros::tableHeader(   
+                                  id              => "mensajes_contacto_table",
+                                  class           => "",
+                                  selectAll_id    => "",
+                                  columns         => ['[% "Fecha"|i18n %]','[% "Asunto"|i18n %]',
+                                                    '[% "Remitente"|i18n %]', '[% "Marcar Como Leido/No Leido"|i18n %]',
+                                                    '[% "Eliminar"|i18n %]',
+                                                     ]
+     
+                                        ) ;
+            [% END %]
+            
                 <tbody>
                     [% FOREACH mensaje IN mensajes_contacto %]
                         <tr class="leido[% mensaje.getLeido %]">
@@ -70,10 +74,16 @@
                                 </a>
                             </td>
                             <td>
-                                <a class="" 
-                                    href="[% url_prefix %]/admin/mensajes_contacto.pl?token=[% token %]&id=[% mensaje.id %]&tipoAccion=eliminar">
-                                    [% 'Eliminar' | i18n %]
-                                </a>
+                                
+                                [% PERL %]
+                                  print C4::AR::Filtros::action_link_button( 
+                                                                  button    => "btn click click",
+                                                                  url       => "[% url_prefix %]/admin/mensajes_contacto.pl?token=[% token %]&id=[% mensaje.id %]&tipoAccion=eliminar", 
+                                                                  icon      => "icon-remove",
+                                                                  title     => "",
+                                                              ) ;
+
+                                [% END %]
                             </td>
                         </tr>
                     [% END %]
