--- a/intranet/htdocs/intranet-tmpl/admin/novedades_opac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/novedades_opac.tmpl
@@ -3,11 +3,11 @@
 <script type="text/javascript">
 
     function obtenerNovedades(){
-        objAH=new AjaxHelper(updateObtenerNovedades);
-        objAH.debug= true;
-        objAH.showOverlay       = true;
-        objAH.url=URL_PREFIX+'/admin/novedades_opacDB.pl';
-        objAH.tipoAccion='LISTAR';
+        objAH               =new AjaxHelper(updateObtenerNovedades);
+        objAH.debug         = true;
+        objAH.showOverlay   = true;
+        objAH.url           = URL_PREFIX+'/admin/novedades_opacDB.pl';
+        objAH.tipoAccion    = 'LISTAR';
         objAH.sendToServer();
     }
 
@@ -15,17 +15,17 @@
             if (!verificarRespuesta(responseText))
                 return(0);
             $('#novedades_opac_ajax').html(responseText);
-            zebra('datos_tabla');
+            //zebra('datos_tabla');
     }
     
     function eliminarNovedad(id_novedad){
-        jConfirm(ELIMINAR_NOVEDAD, NOVEDAD_TITLE, function(confirmStatus){
+        bootbox.confirm(ELIMINAR_NOVEDAD, function(confirmStatus){
             if (confirmStatus){
-                objAH=new AjaxHelper(updateEliminarNovedad);
-                objAH.debug= true;
-                objAH.url=URL_PREFIX+'/admin/novedades_opacDB.pl';
-                objAH.showOverlay       = true;
-                objAH.tipoAccion='ELIMINAR';
+                objAH               =new AjaxHelper(updateEliminarNovedad);
+                objAH.debug         = true;
+                objAH.url           = URL_PREFIX+'/admin/novedades_opacDB.pl';
+                objAH.showOverlay   = true;
+                objAH.tipoAccion    = 'ELIMINAR';
                 objAH.id=id_novedad;
                 objAH.sendToServer();
             }
@@ -36,7 +36,7 @@
             if (!verificarRespuesta(responseText))
                 return(0);
             $('#novedades_opac_ajax').html(responseText);
-            zebra('datos_tabla');
+            //zebra('datos_tabla');
     }
 </script>
 <link rel="stylesheet" type="text/css" href="[% temas %]/[% tema %]/includes/css/fancybox/jquery.fancybox.css">
