--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
@@ -4814,6 +4814,10 @@ body {
 	background-color: #5BB75B;
 }
 
+.table-striped tbody tr:nth-child(odd) td.marked,.table-striped tbody tr:nth-child(odd) th.marked{
+	background-color: #5BB75B;
+}
+
 .clear{
 	clear: both;
 }
