--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ADInfoNivel3.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ADInfoNivel3.tmpl
@@ -1,3 +1,9 @@
+<script>
+	$(document).ready(function(){
+	    $('.tooltip_link').tooltip({delay: { show: 1000, hide: 100 },});
+	});
+</script>
+
 [% PERL %]
     print C4::AR::Filtros::tableHeader(   
                                             id              => "tabla_ejemplares",
