--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ADInfoNivel2.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ADInfoNivel2.tmpl
@@ -13,7 +13,9 @@
         <span id="grupo_[% nivel2.getId2 %]">
         <fieldset>
             <legend class="nivel2Selected trigger trigger_n2_[% nivel2.getId2 %] click">
-                <strong>[% 'Grupo:' | i18n %] [% nivel2.getId2 %] - [% nivel2.getTipoDocumentoObject.getNombre %] ([% nivel2.getTemplate %])</strong>
+                <div class="alert alert-success">
+                    <h2>[% 'Grupo:' | i18n %] <small>[% nivel2.getId2 %] - [% nivel2.getTipoDocumentoObject.getNombre %] ([% nivel2.getTemplate %])</small></h2>
+                </div>
             </legend>
           <div id="nive2_id_[% nivel2.getId2 %]" class="nive2_id_[% nivel2.getId2 %]">
 
@@ -61,7 +63,11 @@
 
         <br />
         <fieldset>
-            <legend class="titulo_legend trigger trigger_n3_[% nivel2.getId2 %] click">[% "Ejemplares" | i18n %]</legend>
+            <legend class="titulo_legend trigger trigger_n3_[% nivel2.getId2 %] click">
+                 <div class="alert alert-info">
+                    <h2>[% "Ejemplares" | i18n %]<small></small></h2>
+                 </div>
+            </legend>
             <!-- detalle del Nivel 3, segun Nivel 2 seleccionado -->
             <div id="ejemplares_nive2_id_[% nivel2.getId2 %]" class="ejemplares_nive2_id_[% nivel2.getId2 %]"></div>
 <!--             <div id="detalleDelNivel3" class="nivel3Footer"></div> -->
