--- a/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
@@ -9,7 +9,7 @@
     });
 </script>
 
-<div class="titulos" >[% "Administraci&oacute;n de permisos" | i18n %]</div>
+<h3>[% "Administraci&oacute;n de permisos" | i18n %]</h3>
 
 [% INCLUDE "partials/admin/_permisos.inc" %]
 
